stderr
JudgeMan.java:42: error: illegal start of expression
        int[] intarray = [5];
                         ^
JudgeMan.java:47: error: reached end of file while parsing
}
 ^
2 errors
